--- a/benchmark_functions.ipynb
+++ b/benchmark_functions.ipynb
@@ -21,7 +21,41 @@
     "y = np.linspace(-10, 10, 100)\n",
     "X, Y = np.meshgrid(x, y)\n",
     "Z = easom(X, Y)\n",
-    "fig = plt.figure()\n",
+    "fig = plt.figure(figsize=(50,50))\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.plot_surface(X, Y, Z, rstride=1, cstride=1,\n",
+    "                cmap='viridis', edgecolor='none')\n",
+    "ax.set_xlabel('x')\n",
+    "ax.set_ylabel('y')\n",
+    "ax.set_zlabel('z');\n",
+    "ax.view_init(20, 35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from mpl_toolkits import mplot3d\n",
+    "\n",
+    "%matplotlib inline\n",
+    "def rastigins(x):\n",
+    "    total = 0\n",
+    "    for i in range(0,len(x)):\n",
+    "        val = np.power(x[i],2) + 10*np.cos(2*np.pi*x[i])\n",
+    "        total += val\n",
+    "    return 10*len(x) + total\n",
+    "\n",
+    "\n",
+    "x = np.linspace(-10, 10, 100)\n",
+    "y = np.linspace(-10, 10, 100)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "Z = rastigins([X,Y])\n",
+    "fig = plt.figure(figsize=(50,50))\n",
     "ax = plt.axes(projection='3d')\n",
     "ax.plot_surface(X, Y, Z, rstride=1, cstride=1,\n",
     "                cmap='viridis', edgecolor='none')\n",
