--- a/benchmark_functions.ipynb
+++ b/benchmark_functions.ipynb
@@ -64,6 +64,47 @@
     "ax.set_zlabel('z');\n",
     "ax.view_init(20, 35)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from mpl_toolkits import mplot3d\n",
+    "\n",
+    "%matplotlib inline\n",
+    "def ackley(x):\n",
+    "    a = 20\n",
+    "    b = 0.2\n",
+    "    c = 2 * np.pi\n",
+    "    comp_x = 0\n",
+    "    comp_x2 = 0\n",
+    "    for i in range(0,len(x)):\n",
+    "        comp_x += np.power(x[i], 2)\n",
+    "        comp_x2 += np.cos(c*x[i])\n",
+    "    comp_x = comp_x/len(x)\n",
+    "    comp_x2 = comp_x2/len(x)\n",
+    "    comp_1 = -a * np.exp(-b * np.sqrt(comp_x))\n",
+    "    comp_2 = np.exp(comp_x2)\n",
+    "    return comp_1 - comp_2 + a + np.exp(1)\n",
+    "\n",
+    "x = np.linspace(-32, 32, 100)\n",
+    "y = np.linspace(-32, 32, 100)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "Z = ackley([X,Y])\n",
+    "fig = plt.figure(figsize=(50,50))\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.plot_surface(X, Y, Z, rstride=1, cstride=1,\n",
+    "                cmap='viridis', edgecolor='none')\n",
+    "ax.set_xlabel('x')\n",
+    "ax.set_ylabel('y')\n",
+    "ax.set_zlabel('z');\n",
+    "ax.view_init(20, 35)"
+   ]
   }
  ],
  "metadata": {
