--- a/benchmark_functions.ipynb
+++ b/benchmark_functions.ipynb
@@ -38,6 +38,34 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from mpl_toolkits import mplot3d\n",
+    "from benchmark_functions import *\n",
+    "\n",
+    "%matplotlib inline\n",
+    "# ISA Easom Test Runs\n",
+    "\n",
+    "x = np.linspace(-500, 500, 100)\n",
+    "y = np.linspace(-500, 500, 100)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "Z = schwefel(X, Y)\n",
+    "fig = plt.figure(figsize=(50,50))\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.plot_surface(X, Y, Z, rstride=1, cstride=1,\n",
+    "                cmap='viridis', edgecolor='none')\n",
+    "ax.set_xlabel('x')\n",
+    "ax.set_ylabel('y')\n",
+    "ax.set_zlabel('z');\n",
+    "ax.view_init(20, 35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from benchmark_functions import *\n",
     "\n",
     "from mpl_toolkits import mplot3d\n",
